--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <title>Colin D.</title>
 </head>
 <body>
     <section class="header" id="header">
         <div class="fade-in">
-            <h2>Hi, ich bin<br><span>Colin Djerdak.</span></h2>
-            <h3>Lerne schnell und einfach HTML und CSS.</h3>
+            <h2>Informatik Schulkurs für<br><span>HTML und CSS.</span></h2>
+            <h3>Made by Colin Djerdak for KAR.</h3>
             <br><br>
             <a href="#overview" class="btn-big">Los geht's!</a>
         </div>
