--- a/index.html
+++ b/index.html
@@ -13,75 +13,23 @@
             <h2>Informatik Schulkurs für<br><span>HTML und CSS.</span></h2>
             <h3>Made by Colin Djerdak for KAR.</h3>
             <br><br>
-            <a href="#overview" class="btn-big">Los geht's!</a>
+            <a href="#courses" class="btn-big">Los geht's!</a>
         </div>
     </section>
 
-    <section class="overview" id="overview">
-        <h2 class="center-text heading">Inhaltsverzeichnis</h2>
-        <div class="grid">
-            <div class="content">
-                <h3 class="center-text">HTML</h3>
-                <br>
-                <div class="g6">
-                    <ol>
-                        <li>Einleitung</li>
-                        <li>Tags</li>
-                        <li>Grundstruktur</li>
-                        <li>Grundelemente</li>
-                        <li>Layout</li>
-                        <li>Überschriften</li>
-                        <li>Texte</li>
-                    </ol>
-                </div>
-                <div class="g6">
-                    <ol start="8">
-                        <li>Listen</li>
-                        <li>Links</li>
-                        <li>Bilder</li>
-                        <li>Videos</li>
-                        <li>Forms</li>
-                        <li>Font Awesome</li>
-                        <li>Youtube</li>
-                    </ol>
-                </div>
-            </div>
-            <div class="clear"></div>
-            <br><br>
-            <div class="content">
-                <h3 class="center-text">CSS</h3>
-                <br>
-                <div class="g6">
-                    <ol>
-                        <li>Einleitung</li>
-                        <li>Syntax</li>
-                        <li>Klassen / IDs</li>
-                        <li>Farben</li>
-                        <li>Margin / Padding</li>
-                        <li>Höhe / Breite</li>
-                        <li>Ränder</li>
-                        <li>Text</li>
-                    </ol>
-                </div>
-                <div class="g6">
-                    <ol start="9">
-                        <li>Tabellen</li>
-                        <li>Display / Position</li>
-                        <li>Overflow / Align</li>
-                        <li>Float</li>
-                        <li>Forms</li>
-                        <li>Box-Modell</li>
-                        <li>Grid-Modell</li>
-                        <li>Mehr...</li>
-                    </ol>
-                </div>
-            </div>
-        </div>
-        <div class="clear"></div>
+    <div id="courses"></div>
+    <section class="area" id="html">
+        <a href="/html-area.html"><h2>HTML</h2></a>
+    </section>
+
+    <section class="area" id="css">
+        <a href="/css-area.html"><h2>CSS</h2></a>
     </section>
 
     <footer class="footer">
-
+        <div class="copyright">
+            <p>&#169; <script>document.write( new Date().getFullYear() );</script> Colin Djerdak</p>
+        </div>
     </footer>
 </body>
 </html>
