--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="header" id="header">
         <div class="fade-in">
-            <h2>Informatik Schulkurs für<br><span>HTML und CSS.</span></h2>
+            <h2>Informatik Schulkurs für<br><span>Webentwicklung.</span></h2>
             <h3>Made by Colin Djerdak for KAR.</h3>
             <br><br>
             <a href="#courses" class="btn-big">Los geht's!</a>
