--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="header" id="header">
         <div class="fade-in">
             <h2>Informatik Schulkurs für<br><span>Webentwicklung.</span></h2>
-            <h3>Made by Colin Djerdak for KAR.</h3>
+            <h3>Made by Colin Djerdak for students.</h3>
             <br><br>
             <a href="#courses" class="btn-big">Los geht's!</a>
         </div>
