--- a/index.html
+++ b/index.html
@@ -17,19 +17,33 @@
         </div>
     </section>
 
-    <div id="courses"></div>
-    <section class="area" id="html">
-        <a href="/html-area.html"><h2>HTML</h2></a>
-    </section>
+    <div class="courses" id="courses">
+        <div class="area" onclick="html()">
+            <div class="bg" id="html"></div>
+            <h2>HTML</h2>
+        </div>
 
-    <section class="area" id="css">
-        <a href="/css-area.html"><h2>CSS</h2></a>
-    </section>
+        <div class="area" id="css">
+            <div class="bg" id="css"></div>
+            <h2>CSS</h2>
+        </div>
+
+        <div class="area" id="php">
+            <div class="bg" id="php"></div>
+            <h2>PHP</h2>
+        </div>
+
+        <div class="area" id="js">
+            <div class="bg" id="js"></div>
+            <h2>JS</h2>
+        </div>
+    </div>
 
     <footer class="footer">
         <div class="copyright">
             <p>&#169; <script>document.write( new Date().getFullYear() );</script> Colin Djerdak</p>
         </div>
     </footer>
+    <script src="index.js"></script>
 </body>
 </html>
