--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
     <div class="courses" id="courses">
         <div class="area" onclick="html()">
             <div class="bg" id="html"></div>
-            <h2>HTML</h2>
+            <a><h2>HTML</h2></a>
         </div>
 
         <div class="area" id="css">
             <div class="bg" id="css"></div>
-            <h2>CSS</h2>
+            <a><h2>CSS</h2></a>
         </div>
 
         <div class="area" id="php">
             <div class="bg" id="php"></div>
-            <h2>PHP</h2>
+            <a><h2>PHP</h2></a>
         </div>
 
         <div class="area" id="js">
             <div class="bg" id="js"></div>
-            <h2>JS</h2>
+            <a><h2>JS</h2></a>
         </div>
     </div>
 
