--- a/index.html
+++ b/index.html
@@ -20,22 +20,26 @@
     <div class="courses" id="courses">
         <div class="area" onclick="html()">
             <div class="bg" id="html"></div>
-            <a><h2>HTML</h2></a>
+            <div class="content">
+                <h2>HTML</h2>
+                <p>Hypertext Markup Language</p>
+            </div>
         </div>
 
-        <div class="area" id="css">
+        <div class="area">
             <div class="bg" id="css"></div>
-            <a><h2>CSS</h2></a>
+            <div class="content">
+                <h2>CSS</h2>
+                <p>Cascading Style Sheets</p>
+            </div>
         </div>
 
-        <div class="area" id="php">
-            <div class="bg" id="php"></div>
-            <a><h2>PHP</h2></a>
-        </div>
-
-        <div class="area" id="js">
+        <div class="area js-area">
             <div class="bg" id="js"></div>
-            <a><h2>JS</h2></a>
+            <div class="content">
+                <h2>JS</h2>
+                <p>JavaScript</p>
+            </div>
         </div>
     </div>
 
