--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
 
-        <div class="area">
+        <div class="area" onclick="later()">
             <div class="bg" id="css"></div>
             <div class="content">
                 <h2>CSS</h2>
@@ -34,7 +34,7 @@
             </div>
         </div>
 
-        <div class="area js-area">
+        <div class="area js-area" onclick="later()">
             <div class="bg" id="js"></div>
             <div class="content">
                 <h2>JS</h2>
