--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/pw.js"></script>
     <link rel="stylesheet" href="index.css">
     <title>Colin D.</title>
 </head>
@@ -14,7 +13,7 @@
             <h2>Informatik Schulkurs für<br><span>Webentwicklung.</span></h2>
             <h3>Made by Colin Djerdak for students.</h3>
             <br><br>
-            <a href="#courses" class="btn-big">Los geht's!</a>
+            <a onclick="login()" class="btn-big">Los geht's!</a>
         </div>
     </section>
 
@@ -49,6 +48,8 @@
             <p>&#169; <script>document.write( new Date().getFullYear() );</script> Colin Djerdak</p>
         </div>
     </footer>
+
+    <script src="/pw.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
