--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </section>
 
-    <div class="courses" id="courses">
+    <div class="courses" id="courses" style="display: none;">
         <div class="area" onclick="html()">
             <div class="bg" id="html"></div>
             <div class="content">
