--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </footer>
 
-    <script src="/pw.js"></script>
+    <script src="pw.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
