--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>Home ● Webkurs</title>
 </head>
 <body>
+
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <form action="/" method="post">
+                <label for="pw">Bitte Passwort eingeben:</label>
+                <input type="password" name="pw" id="pw">
+                <button type="submit">Weiter</button>
+            </form>
+        </div>
+      
+      </div>
+
     <section class="header" id="header">
         <div class="fade-in">
             <h2>Informatik Schulkurs für<br><span>Webentwicklung.</span></h2>
