--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Modal content -->
         <div class="modal-content">
             <span class="close">&times;</span>
-            <form action="/" method="post">
+            <form action="" method="post">
                 <label for="pw">Bitte Passwort eingeben:</label>
                 <input type="password" name="pw" id="pw">
                 <button type="submit">Weiter</button>
