--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>Informatik Schulkurs für<br><span>Webentwicklung.</span></h2>
             <h3>Made by Colin Djerdak for students.</h3>
             <br><br>
-            <a onclick="login()" class="btn-big">Los geht's!</a>
+            <a id="login" class="btn-big">Los geht's!</a>
         </div>
     </section>
 
