--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 <body>
 
-    <div id="id01" class="modal">
-  
-        <form class="modal-content animate" action="/action_page.php" method="post">
+    <div id="myModal" class="modal">
+        <form class="modal-content animate" action="" method="post">
           <div class="imgcontainer">
-            <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+            <span class="close">&times;</span>
             <img src="img_avatar.png" alt="Avatar" class="avatar">
           </div>
       
