--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <form class="modal-content animate" action="" method="post">
           <div class="imgcontainer">
             <span class="close">&times;</span>
-            <img src="img_avatar.png" alt="Avatar" class="avatar">
+            <img src="/images/img_avatar.png" alt="Avatar" class="avatar">
           </div>
       
           <div class="container">
