--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="myModal" class="modal">
-        <form class="modal-content animate" method="post">
+        <div class="modal-content animate">
           <div class="imgcontainer">
             <span class="close">&times;</span>
             <img src="/images/img_avatar.png" alt="Avatar" class="avatar">
@@ -24,7 +24,7 @@
             <button type="submit" onclick="loginBtn()">Login</button>
             
           </div>
-        </form>
+        </div>
     </div>
 
     <section class="header" id="header">
