--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="autor" content="CDesigns">
     <link rel="stylesheet" href="index.css">
     <title>Home ● Webkurs</title>
 </head>
 <body>
 
     <div id="myModal" class="modal">
-        <div class="modal-content animate">
+        <div class="modal-content animate" method="post">
           <div class="imgcontainer">
             <span class="close">&times;</span>
             <img src="/images/img_avatar.png" alt="Avatar" class="avatar">
@@ -21,7 +22,7 @@
             <label for="psw"><b>Password</b></label>
             <input type="password" id="psw" placeholder="Enter Password" name="psw">
             <p style="font-size:0.8em;" id="error"></p>
-            <button type="submit" onclick="loginBtn()">Login</button>
+            <button onclick="loginBtn()">Login</button>
             
           </div>
         </div>
